--- a/GAS/View/User.html
+++ b/GAS/View/User.html
@@ -223,7 +223,7 @@
         </div>
 
         <div ng-show="existingUserDiv" class="layout_modal_Window">
-            <div class="panel panel-primary layout_modal_container">
+            <div class="panel panel-primary layout_modal_container" style="width:450px;">
                 <div class="panel-heading">
                     Add Exising User<span ng-click="existingUserDiv=false" style="float:right;" title="Close" class="fa fa-close"></span>
                 </div>
