--- a/GAS/View/Approval.html
+++ b/GAS/View/Approval.html
@@ -9,7 +9,10 @@
     <div class="container-fluid">
         <div class="row form-group">
             <div class="col-sm-6">
-                <div class="form-inline" style="text-align:center;"><label class="heading_label">Filter</label> <input class="form-control" style="width:250px;" ng-model="searchText"></div>
+                <div class="form-inline" style="text-align:center;">
+                <label class="heading_label">Filter</label> 
+                <input class="form-control" style="width:250px;" ng-model="searchText">
+                </div>
             </div>
             <div class="col-sm-6"></div>
         </div>
