--- a/GAS/View/employedashboard.html
+++ b/GAS/View/employedashboard.html
@@ -9,7 +9,7 @@
         <div class="row" ng-show="ProjectList.length==0">
             No Project found, Please create Project First
         </div>
-        <div class="row">
+        <div class="row" style="margin-right:5px; margin-left:5px">
             <div class="col-sm-6">
                 <h4 >{{Dashboard}}</h4>
             </div>
